// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`No User Logged In Matches Snapshot 1`] = `
<nav
  className="navbar navbar-expand-lg navbar-dark bg-dark"
>
  <div
    className="container"
  >
    <a
      className="navbar-brand"
      href="/"
    >
      Workout Tracker
    </a>
    <button
      aria-controls="basic-navbar-nav"
      aria-label="Toggle navigation"
      className="navbar-toggler collapsed"
      onClick={[Function]}
      type="button"
    >
      <span
        className="navbar-toggler-icon"
      />
    </button>
    <div
      aria-expanded={null}
      className="navbar-collapse collapse"
      id="basic-navbar-nav"
    >
      <div
        className="ms-auto navbar-nav"
        onKeyDown={[Function]}
      >
        <a
          className="nav-link"
          data-rr-ui-event-key="/login"
          disabled={false}
          href="/login"
          onClick={[Function]}
        >
          Login
        </a>
        <a
          className="nav-link"
          data-rr-ui-event-key="/signup"
          disabled={false}
          href="/signup"
          onClick={[Function]}
        >
          Sign Up
        </a>
      </div>
    </div>
  </div>
</nav>
`;

exports[`User Logged In, with fake token Matches Snapshot 1`] = `
<nav
  className="navbar navbar-expand-lg navbar-dark bg-dark"
>
  <div
    className="container"
  >
    <a
      className="navbar-brand"
      href="/"
    >
      Workout Tracker
    </a>
    <button
      aria-controls="basic-navbar-nav"
      aria-label="Toggle navigation"
      className="navbar-toggler collapsed"
      onClick={[Function]}
      type="button"
    >
      <span
        className="navbar-toggler-icon"
      />
    </button>
    <div
      aria-expanded={null}
      className="navbar-collapse collapse"
      id="basic-navbar-nav"
    >
      <div
        className="me-auto navbar-nav"
        onKeyDown={[Function]}
      >
        <a
          className="nav-link"
          data-rr-ui-event-key="/dashboard"
          disabled={false}
          href="/dashboard"
          onClick={[Function]}
        >
          Dashboard
        </a>
        <a
          className="nav-link"
          data-rr-ui-event-key="/create"
          disabled={false}
          href="/create"
          onClick={[Function]}
        >
          Add Workout
        </a>
      </div>
      <div
        className="navbar-nav"
        onKeyDown={[Function]}
      >
        <a
          className="nav-link"
          data-rr-ui-event-key="/user"
          disabled={false}
          href="/user"
          onClick={[Function]}
        >
          Roy
        </a>
        <a
          className="nav-link"
          data-rr-ui-event-key={null}
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          Sign Out
        </a>
      </div>
    </div>
  </div>
</nav>
`;
